# energy_feedback_thesis

./: README.md
embedded_devices/: .gitignore
embedded_devices/oslib/ble_driver/: ble_power.c  ble_power.h  ble_proxy.c  ble_proxy.h
embedded_devices/power_node/: CMakeLists.txt  prj.conf
embedded_devices/power_node/conf_files/: prj.conf  pwr_node_aircon.conf  pwr_node_tv.conf  pwr_node_water_heater.conf
embedded_devices/power_node/inc/: main.h
embedded_devices/power_node/src/: main.c
embedded_devices/proxy_node/: CMakeLists.txt  prj.conf
embedded_devices/proxy_node/src/: main.c
final_smart_watch/: build.gradle  logcat.txt
final_smart_watch/start/: build.gradle
old_smart_watch/: .project
old_smart_watch/.metadata/: version.ini
old_smart_watch/bluetooth_service/: .cproject  .project  project_def.prop
old_smart_watch/bluetooth_service/Debug/: .ninja_deps  .ninja_log  bluetooth_service  compile_commands.json
old_smart_watch/bluetooth_service/Release/: .ninja_deps  .ninja_log  compile_commands.json  target.ninja
old_smart_watch/bluetooth_service/inc/: bluetooth_service.h
old_smart_watch/bluetooth_service/src/: bluetooth_service.c
old_smart_watch/first_test/: tizen-manifest.xml
old_smart_watch/first_test/.sign/: signature1.xml
old_smart_watch/first_test/Debug/: .ninja_deps  org.example.first_test-1.0.0-x86.tpk  target.ninja
old_smart_watch/uiTest/: .project  .tproject  index.html
smart_watch/.metadata/: version.ini
smart_watch/bluetooth_service/: .cproject  .project  tizen-manifest.xml
smart_watch/first_test/: .cproject  .project  project_def.prop
smart_watch/uiTest/: .project  config.xml  index.html  uiTest.wgt
(+115 files in other folders)
